--- a/package.json
+++ b/package.json
@@ -14,11 +14,17 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "18.0.3",
-    "@types/react": "18.0.15",
-    "@types/react-dom": "18.0.6",
-    "eslint": "8.19.0",
-    "eslint-config-next": "12.2.2",
-    "typescript": "4.7.4"
+    "@react-oauth/google": "^0.2.6",
+    "@sanity/client": "^3.3.0",
+    "axios": "^0.27.2",
+    "gapi-script": "^1.2.0",
+    "next": "12.1.6",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-google-login": "^5.2.2",
+    "react-icons": "^4.3.1",
+    "typescript": "^4.7.4",
+    "uuidv4": "^6.2.13",
+    "zustand": "^4.0.0-rc.1"
   }
 }
