--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
   "devDependencies": {
     "@react-oauth/google": "^0.2.6",
     "@sanity/client": "^3.3.0",
+    "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
     "gapi-script": "^1.2.0",
     "next": "12.1.6",
+    "postcss": "^8.4.14",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
+    "tailwindcss": "^3.1.5",
     "typescript": "^4.7.4",
     "uuidv4": "^6.2.13",
     "zustand": "^4.0.0-rc.1"
