--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@react-oauth/google": "^0.2.6",
     "@sanity/client": "^3.3.0",
+    "@types/node": "^18.0.5",
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
     "gapi-script": "^1.2.0",
