--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "jwt-decode": "^3.1.2",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -17,6 +18,7 @@
     "@react-oauth/google": "^0.2.6",
     "@sanity/client": "^3.3.0",
     "@types/node": "^18.0.5",
+    "@types/react": "^18.0.15",
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
     "gapi-script": "^1.2.0",
@@ -24,7 +26,6 @@
     "postcss": "^8.4.14",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
     "tailwindcss": "^3.1.5",
     "typescript": "^4.7.4",
